some minor fixes